src/z80asm/z80asm2/t/40-syntax/expected/byte_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/byte_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/byte_01.asm...
t/40-syntax/input/byte_01.asm:1:5: error: Expression expected
    byte
        ^
t/40-syntax/input/byte_01.asm:2:1: error: Unterminated expression after "byte"
    byte ,
    ^
t/40-syntax/input/byte_01.asm:4:18: error: Expression expected
    byte 1,2,3,1+2*3,
                     ^
t/40-syntax/input/byte_01.asm:5:18: error: Unexpected token: "@"
    byte 1,2,3,1+2*3 @
                     ^
Program
    OpcodeStmt
        Location: t/40-syntax/input/byte_01.asm:3:1
        Address: 0
        Bytes: 0 0 0 0
        Patches:
            Patch
                Location: t/40-syntax/input/byte_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 0, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 1
                        Location: t/40-syntax/input/byte_01.asm:3:6
                        Value type: Unknown
                        Tokens: 1
            Patch
                Location: t/40-syntax/input/byte_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 1, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 2
                        Location: t/40-syntax/input/byte_01.asm:3:8
                        Value type: Unknown
                        Tokens: 2
            Patch
                Location: t/40-syntax/input/byte_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 2, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprLiteralInt: 3
                        Location: t/40-syntax/input/byte_01.asm:3:10
                        Value type: Unknown
                        Tokens: 3
            Patch
                Location: t/40-syntax/input/byte_01.asm:3:1
                Value type: Unknown
                Tokens: 
                Offset: 3, Size: 1
                Type: Unsigned
                Validation: Any
                Formula: None
                Inner expression:
                    ExprBinary: +
                        Location: t/40-syntax/input/byte_01.asm:3:14
                        Value type: Unknown
                        Tokens: 1+2*3
                        LHS:
                            ExprLiteralInt: 1
                                Location: t/40-syntax/input/byte_01.asm:3:12
                                Value type: Unknown
                                Tokens: 
                        RHS:
                            ExprBinary: *
                                Location: t/40-syntax/input/byte_01.asm:3:16
                                Value type: Unknown
                                Tokens: 
                                LHS:
                                    ExprLiteralInt: 2
                                        Location: t/40-syntax/input/byte_01.asm:3:14
                                        Value type: Unknown
                                        Tokens: 
                                RHS:
                                    ExprLiteralInt: 3
                                        Location: t/40-syntax/input/byte_01.asm:3:16
                                        Value type: Unknown
                                        Tokens: 
    OpcodeStmt
        Location: t/40-syntax/input/byte_01.asm:6:1
        Address: 0
        Bytes: $68 $65 $6C $6C $6F $20 $77 $6F $72 $6C $64 $21 $0A
